--- a/css/customcss.css
+++ b/css/customcss.css
@@ -1,6 +1,15 @@
 /* body {
     padding-top: 50px;
 } */
+
+body::-webkit-scrollbar {
+    width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+    
+}
+
 #alert-success div, #alert-danger div {
 	display: none;
 	top: 70px;
