--- a/css/customcss.css
+++ b/css/customcss.css
@@ -1,80 +1,122 @@
-/* body {
-    padding-top: 50px;
-} */
+:root {
+    font-size: 16px;
+    font-family: 'Open Sans';
+    --text-primary: #8b8b8b;
+    --text-secondary: #d3d3d3;
+    --bg-primary: #303778;
+    --bg-secondary: #84a1e9;
+}
+
+body {
+    color: black;
+    background-color: #fcfdff;
+    margin: 0;
+    padding: 0;
+}
 
 body::-webkit-scrollbar {
     width: 0.25rem;
 }
 
 body::-webkit-scrollbar-track {
-    
+    background: #1e1e24;
 }
 
-#alert-success div, #alert-danger div {
-	display: none;
-	top: 70px;
+body::-webkit-scrollbar-thumb {
+    background: #303778;
 }
 
-.jumbotron {
-	background-image: url("../img/worldmap.jpg");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+main {
+    margin-left: 5rem;
+    padding: 1rem;
 }
 
-.jumbotron > .overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0);
-    z-index: 1;
+.navbar {
+    width: 5rem;
+    height: 100vh;
+    position: fixed;
+    background-color:white;
+    transition: width 200ms ease;
 }
 
-.jumbotron > .inner {
-    z-index: 2;
-}
-
-.fa-chevron-down {
-    position: absolute;
-	bottom: 10px;
-}
-
-.fa-chevron-up {
-    position: absolute;
-	bottom: 75px;
-}
-
-
-#contact {
-
-	height: calc(100vh - 75px);
-
-}
-
-.bg-gradient-primary {
-	background: linear-gradient(45deg, #4099ff, #73b4ff);
-}
-
-.bg-gradient-success {
-	background: linear-gradient(45deg, #2ed8b6, #59e0c5);
-}
-
-.bg-gradient-warning {
-	background: linear-gradient(45deg, #ffb64d, #ffcb80);
-}
-
-.bg-gradient-danger {
-	background: linear-gradient(45deg, #ff5370, #ff869a);
-}
-
-#map-container {
-    height: 500px;
-    /* width: 400px; */
-}
-
-#map {
+.navbar-nav {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
     height: 100%;
+}
+
+.logo {
     width: 100%;
+    height: 3.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    text-align: center;
+    color: var(--bg-primary);
+    font-size: 1.5rem;
+    letter-spacing: 0.3ch;
+}
+
+.nav-logo {
+    display: flex;
+    align-items: center;
+    height: 3.5rem;
+    color: var(--text-primary);
+    text-decoration: none;
+}
+
+.nav-logo img {
+    width: 2.5rem;
+    min-width: 2.5rem;
+    margin: 0 0.5rem;
+}
+
+.nav-item {
+    width: 100%;
+    height: 3.5rem;
+}
+
+.nav-item img{
+    width: 1.5rem;
+    min-width: 1.5rem;
+    margin: 0 1rem;
+}
+  
+.nav-item:last-child {
+    margin-top: auto;
+}
+
+.nav-link {
+    display: flex;
+    align-items: center;
+    height: 3.5rem;
+    color: var(--text-primary);
+    text-decoration: none;
+    filter: grayscale(100%) opacity(0.7);
+    transition: var(--transition-speed);
+  }
+
+.nav-link:hover {
+    filter: grayscale(0%) opacity(1);
+    background: var(--bg-secondary);
+    color: var(--text-secondary);
+}
+
+.link-text {
+    display: none;
+    margin-left: 1rem;
+    color: black;
+}
+
+.navbar:hover {
+    width: 16rem;
+}
+
+.navbar:hover .link-text {
+    display: block;
 }
