--- a/css/customcss.css
+++ b/css/customcss.css
@@ -62,7 +62,7 @@ main {
     letter-spacing: 0.3ch;
 }
 
-.logo-img {
+.logo img {
     width: 2.5rem;
     min-width: 2rem;
     margin: 0 0.75rem;
