--- a/css/customcss.css
+++ b/css/customcss.css
@@ -36,6 +36,7 @@ main {
     height: 100vh;
     position: fixed;
     background-color:white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     transition: width 200ms ease;
 }
 
