--- a/css/map.css
+++ b/css/map.css
@@ -16,3 +16,15 @@ div.tooltip {
     border-radius: 8px;           
     pointer-events: none;         
 }
+
+/* Legend Position Style */
+.legend {
+	position:absolute;
+	left:900px;
+	top:400px;
+}
+
+.outmain {
+    margin-left: 5rem;
+    padding: 1rem;
+}
