--- a/css/customcss.css
+++ b/css/customcss.css
@@ -77,10 +77,10 @@ main {
     text-decoration: none;
 }
 
-.nav-item {
+/* .nav-item {
     width: 100%;
     height: 3.5rem;
-}
+} */
 
 .nav-item img{
     width: 1.5rem;
