--- a/css/customcss.css
+++ b/css/customcss.css
@@ -77,10 +77,10 @@ main {
     text-decoration: none;
 }
 
-/* .nav-item {
+.nav-item {
     width: 100%;
     height: 3.5rem;
-} */
+}
 
 .nav-item img{
     width: 1.5rem;
@@ -88,9 +88,9 @@ main {
     margin: 0 1rem;
 }
   
-.nav-item:last-child {
+/* .nav-item:last-child {
     margin-top: auto;
-}
+} */
 
 .link-text {
     display: none;
