--- a/css/customcss.css
+++ b/css/customcss.css
@@ -98,6 +98,29 @@ main {
     color: black;
 }
 
+.weather-container {
+    background-color: var(--bg-secondary);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    overflow: hidden;
+}
+
+.weather-background img{
+    width: 100%;
+    object-fit: contain;
+    opacity: 0.8;
+}
+
+.weather-box{
+    background: rgb(95, 95, 95);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+
 /* small screen*/
 @media only screen and (max-width: 600px){
     .navbar{
@@ -128,6 +151,10 @@ main {
 
     main{
         margin: 0;
+    }
+
+    .weather-container img {
+        width: 25rem;
     }
 
 }
@@ -174,5 +201,9 @@ main {
     
     .navbar:hover .link-text {
         display: block;
+    }
+
+    .weather-container:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     }
 }
