--- a/css/customcss.css
+++ b/css/customcss.css
@@ -132,7 +132,27 @@ main {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 10px;
+    padding: 16px;
 }
+
+
+.About-us h1{
+    color: var(--bg-primary); 
+    font-family: 'Trocchi', serif; 
+    font-size: 45px; 
+    font-weight: normal; 
+    line-height: 48px; 
+    margin: 0;
+}
+
+.About-us p {
+    color: #4c4a37; 
+    font-family: 'Source Sans Pro', sans-serif; 
+    font-size: 18px;
+    line-height: 32px; 
+    margin: 0 0 24px;
+}
+
 
 .blank-space {
     float: left;
